<resources>
    <string name="app_name">Personeros FT</string>
    <string name="user_type_enlace">Enlace</string>
    <string name="user_type_coordinador">Coordinador</string>
    <string name="user_type_personero">Personero</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="isSessionSaved">com.chano.personerosft.isSessionStarted</string>
    <string name="idUser">com.chano.personerosft.idUser</string>

    <string name="message_no_internet">Conectate a internet para poder usar la aplicación</string>
    <string name="tittle_no_internet">Sin internet</string>
    <string name="option_see_results">Ver resultados</string>
    <string name="option_save_act">Guardar Acta</string>
    <string name="option_take_list">Tomar Lista</string>
    <string name="option_info_table">Mi mesa</string>
    <string name="option_mark_list">Marcar Asistencia</string>
    <string name="user_session">Sesión</string>
    <string name="option_log_out">Cerrar Sesión</string>
    <string name="text_open">open</string>
    <string name="text_close">close</string>
    <string name="text_yes">Sí</string>
    <string name="text_no">No</string>
    <string name="text_activate">Activar</string>
    <string name="text_not_now">Ahora no</string>
    <string name="text_question_log_out">¿Seguro que desea cerrar sesión?</string>
    <string name="text_tittle_alert">Aviso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_username_empty">Ingrese un nombre de usuario</string>
    <string name="error_password_empty">Ingrese una clave</string>
    <string name="text_logging_in">Iniciando sesión</string>
    <string name="text_log_in">Iniciar sesión</string>
    <string name="error_server">Error al comunicarse con el servidor</string>
    <string name="tittle_error">Error</string>
    <string name="tex_ok">Ok</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="hint_password">Clave</string>
    <string name="text_remember_me">Recuérdame</string>
    <string name="key_message">displayMessage</string>
    <string name="error_generic">Error al procesar la solicitud</string>
</resources>